트레이너 운동 기록 루틴 관리 및 사이드바 개선